# sftp2s3

./: .gitignore  Makefile  README.md  config.example.yaml  pyproject.toml
sftp_to_s3_sync/: cli.py
test/: test_cli.py
